# Data-Oriented-Manifesto

./: Notes.txt  data oriented manifesto.txt  old.md  readme.md  readme.txt
simple-dop-example/: Cargo.toml
simple-dop-example/assets/gui/in main_menu/: exit_button.txt  label.txt  play_button.txt
simple-dop-example/assets/gui/in main_menu/in play_button/: play_button_progress.txt  play_button_text.txt
simple-dop-example/assets/gui/in playing/: main_pause_menu.txt  pause_menu.txt
simple-dop-example/assets/gui/in playing/in main_pause_menu/: resume_button.txt
simple-dop-example/assets/gui/in playing/in pause_menu/: main_pause_menu.txt  resume_button.txt
simple-dop-example/assets/gui/main menu/: exit_button.txt  play_button.txt
simple-dop-example/assets/gui/main menu/in play_button/: play_button_background.txt  play_button_text.txt
simple-dop-example/assets/gui/playing/in main_pause_menu/: exit_button.txt
simple-dop-example/src/: custom_impls.rs  main.rs  render.rs  utils.rs
simple-dop-example/src/data_mod/: general_data.rs  mod.rs
simple-dop-example/src/gui_integration_mod/: init.rs  mod.rs  render.rs
simple-dop-example/src/gui_mod/: data.rs  errors.rs  gui_utils.rs  load.rs  mod.rs  prelude.rs  render.rs  update.rs  utils.rs
simple-dop-example/src/update_mod/: gui_click_fns.rs  mod.rs  process_inputs.rs  update.rs  update_for_main_menu.rs  update_for_playing.rs  update_gui.rs  update_utils.rs
