[package]
name = "simple-dop-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = "0.12.0"
anyhow = "1.0.75"
derive_is_enum_variant = "0.1.1"
ab_glyph = "0.2.22"
array-init = "2.1.0"
num-integer = "0.1.45"
rand = "0.8.5"
